updated to use database

--- a/NetCoreTrial/appsettings.json
+++ b/NetCoreTrial/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=ESLAM-MOHAMED\\MSSQLSERVER2016;Initial Catalog=NetCoreTrial1_Products;Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
